--- a/templates/cadastro_candidato.html
+++ b/templates/cadastro_candidato.html
@@ -1,18 +1,16 @@
+{% extends '_base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/cadastro_candidato.css' %}">
-    <title>Cadastro Candidato</title>
-</head>
-<header>
-
-</header>
-<body>
+{% block content %}
+<section>
     <div class="card">
+
+        <ol class="caminho">
+            <li><a href="{% url 'adm_home' %}">Home</a></li>
+            <li>></li>
+            <li>Cadastrar Candidato</li>
+        </ol>
+
         <h1>Cadastro de Candidato</h1>
         {% if msg %}
             <p>{{ msg }}</p>
@@ -35,5 +33,5 @@
             <button type="submit">Cadastrar Candidato</button>
         </form>
     </div>
-</body>
-</html>
+</section>
+{% endblock %}
