--- a/templates/eleicao.html
+++ b/templates/eleicao.html
@@ -1,16 +1,8 @@
+{% extends '_base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/eleicao.css' %}">
-    <title>Urna Digital DPDF</title>
-</head>
-
-{% include '_header.html' %}
-<body>
+{% block content %}
+<section>
 
     <ol class="caminho">
         <li><a href="{% url 'index' %}">Home</a></li>
@@ -45,5 +37,6 @@
             {% endfor %}
         </tbody>
     </table>
-</body>
-</html>
+    
+</section>
+{% endblock %}
