--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,8 @@
+{% extends '_base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <title>Eleitor DPDF</title>
-</head>
-
-<body>
-    {% include '_header.html' %}
-
+{% block content %}
+<section>
     <ol class="caminho">
         <li><a href="{% url 'index' %}">Home</a></li>
     </ol>
@@ -58,6 +49,5 @@
             <p>Não existe eleições disponiveis!</p>
         {% endif %}
     </div>
-   
-</body>
-</html>
+</section>
+{% endblock %}
