--- a/templates/nova_eleicao.html
+++ b/templates/nova_eleicao.html
@@ -1,24 +1,16 @@
+{% extends '_base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/nova_eleicao.css' %}">
-    <title>Criar nova Eleição</title>
-</head>
+{% block content %}
+<section>
 
-<style>
-    table, th, td {
-        border: 1px solid;
-    }
-</style>
+    <ol class="caminho">
+        <li><a href="{% url 'adm_home' %}">Home</a></li>
+        <li>></li>
+        <li>Cadastrar Eleição</li>
+    </ol>
 
-<header>
 
-</header>
-<body>
     <div class="card">
         <h2>Cadastro de Eleição</h2>
         <form method="POST" action="{% url 'nova_eleicao' %}" >
@@ -71,6 +63,6 @@
             {% endif %}
             <button type="submit">Criar Eleição</button>
         </form>
-        </div>
-</body>
-</html>
+    </div>
+</section>
+{% endblock %}
