create CRUD eleicao

--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -32,7 +32,7 @@
                     <img src="../static/img/add_eleicao.png" alt="imagem_eleitor">
                     <div>
                         <a href="{% url 'nova_eleicao' %}">Nova Eleição |</a>
-                        <a href="">Editar</a>
+                        <a href="{% url 'editar_eleicao_todos' %}">Editar</a>
                     </div>
                     
                 </div>
