--- a/templates/editar_candidato.html
+++ b/templates/editar_candidato.html
@@ -29,7 +29,7 @@
         <label for="foto_perfil">Foto de Perfil:</label>
         <input type="file" id="new_foto_perfil" name="new_foto_perfil" accept="image/*">
 
-        <button type="submit">Editar Candidato</button>
+        <button type="submit">Salvar Candidato</button>
     </form>
  
 </section>
