--- a/templates/editar_eleitor.html
+++ b/templates/editar_eleitor.html
@@ -24,7 +24,7 @@
         <label for="cpf">CPF:</label>
         <input type="text" id="cpf" name="cpf" value="{{ eleitor.cpf }}" required>
 
-        <button type="submit">Editar Eleitor</button>
+        <button type="submit">Salvar Eleitor</button>
     </form>
 </section>
 {% endblock %}
