--- a/static/css/style.css
+++ b/static/css/style.css
@@ -104,16 +104,24 @@ footer {
     font-size: 2rem;
     margin-bottom: 10px;
 }
+.login-form-container label {
+    align-self: self-start;
+    padding-left: 10px;
+}
 
 .login-form-container form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     width: 100%; /* Ocupa toda a largura do contêiner pai */
     max-width: 400px; /* Define uma largura máxima para o formulário */
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    
+    height: 400px;
     
 }
 
@@ -135,8 +143,10 @@ footer {
 }
 
 .login-form-link {
-    display: block;
-    margin-top: 10px;
+    align-self: self-start;
+    padding-left: 10px;
+    font-size: 12px;
+    margin-bottom: 15px;
     text-decoration: none;
     color: #007BFF;
 }
@@ -209,3 +219,75 @@ footer {
 
     
 /* FIM ADM HOME */
+
+
+/* EDITAR_CANDIDATO HOME */
+
+.editar-candidato-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.editar-candidato-container ol{
+    width: 100%;
+    height: 15%;
+    padding-left: 25px;
+}
+.editar-candidato-container img{
+    height: 250px;
+    width: 250px;
+}
+.editar-candidato-container form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 85%;
+    width: 25%;
+    margin: 20px 0;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    
+}
+.editar-candidato-background{
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+    height: 35%;
+  
+    margin-bottom: 15px;
+}
+
+.editar-candidato-container input {
+    width: 350px; /* Ocupa toda a largura, subtraindo o padding */
+    padding: 5px;
+     font-size: 16px;
+     border-width: 1px;
+     border-color: #CCCCCC;
+     background-color: #FFFFFF;
+     color: #000000;
+     border-style: solid;
+     border-radius: 8px;
+     box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+     margin-top: 5px;
+     margin-bottom: 15px;
+}
+
+.editar-candidato-container button {
+    width: 100px;
+    background-color: #338C4E;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+
+/* FIM EDITAR_CANDIDATO HOME */
