--- a/templates/editar_candidato.html
+++ b/templates/editar_candidato.html
@@ -2,9 +2,9 @@
 {% load static %}
 
 {% block content %}
-<section>
 
-    <ol class="caminho">
+<div class="editar-candidato-container">
+    <ol >
         <li><a href="{% url 'adm_home' %}">Home</a></li>
         <li>></li>
         <li><a href="{% url 'editar_candidatos_todos' %}">Editar Candidato</a></li>
@@ -14,9 +14,9 @@
 
     <form action="{% url 'editar_candidato' candidato_id=candidato.id %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-
-        <img name="foto_perfil" id="foto_perfil" src="/media/{{ candidato.foto_perfil }}" accept="image/*" alt="foto de perfil">
-
+        <div style="background-image: url('/media/{{ candidato.foto_perfil }}');" class="editar-candidato-background" name="foto_perfil" id="foto_perfil" accept="image/*" alt="foto de perfil">
+            
+        </div>
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" value="{{ candidato.nome }}" required>
 
@@ -31,6 +31,6 @@
 
         <button type="submit">Editar Candidato</button>
     </form>
- 
-</section>
+
+</div>
 {% endblock %}
