--- a/templates/editar_candidatos_todos.html
+++ b/templates/editar_candidatos_todos.html
@@ -2,53 +2,55 @@
 {% load static %}
 
 {% block content %}
-    <section>
+    <div class="editar-candidato-todos-container">
 
-        <ol class="caminho">
-            <li><a href="{% url 'adm_home' %}">Home</a></li>
-            <li>></li>
-            <li>Editar Candidato</li>
+        <ol >
+            <li><a href="{% url 'adm_home' %}">Home ></a></li>
+            <li><a href="">Editar Candidato</a></li>
         </ol>    
 
         {% if candidatos %}
         <h1>Lista de Candidatos</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Foto</th>
-                    <th>Matrícula</th>
-                    <th>Nome</th>
-                    <th>CPF</th>
-                    <th>Selecionar</th>
-                    <th>Excluir</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for cand in candidatos %}
-                    <tr>                
-                        <td><img src="/media/{{ cand.foto_perfil }}" width="50" height="50"></td>
-                        <td>{{ cand.matricula }}</td>
-                        <td>{{ cand.nome }}</td>
-                        <td>{{ cand.cpf }}</td>
-                        <td>
-                            <form action="{% url 'editar_candidato' candidato_id=cand.id %}" method="GET">
-                                <input type="hidden" id="candidato_id" name="candidato_id" value="{{ cand.id }}">
-                                <button type="submit">Editar</button>
-                            </form>   
-                        </td>
-                        <td>
-                            <form action="{% url 'editar_candidato' candidato_id=cand.id %}" method="POST">
-                                {% csrf_token %}
-                                <input type="hidden" name="_method" value="DELETE">
-                                <button type="submit">Excluir</button>
-                            </form>
-                        </td>
+        <div class="contain-table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Foto</th>
+                        <th>Matrícula</th>
+                        <th>Nome</th>
+                        <th>CPF</th>
+                        <th>Selecionar</th>
+                        <th>Excluir</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        {% else %}
-            <p>Não existe candidatos cadastrados</p>
-        {% endif %}
-    </section>
+                </thead>
+                <tbody>
+                    {% for cand in candidatos %}
+                        <tr>                
+                            <td><img src="/media/{{ cand.foto_perfil }}" width="50" height="50"></td>
+                            <td>{{ cand.matricula }}</td>
+                            <td>{{ cand.nome }}</td>
+                            <td>{{ cand.cpf }}</td>
+                            <td>
+                                <form action="{% url 'editar_candidato' candidato_id=cand.id %}" method="GET">
+                                    <input type="hidden" id="candidato_id" name="candidato_id" value="{{ cand.id }}">
+                                    <button type="submit">Editar</button>
+                                </form>   
+                            </td>
+                            <td>
+                                <form action="{% url 'editar_candidato' candidato_id=cand.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="_method" value="DELETE">
+                                    <button type="submit">Excluir</button>
+                                </form>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+                <p>Não existe candidatos cadastrados</p>
+            {% endif %}
+        </div>
+        
+    </div>
 {% endblock %}
