--- a/templates/editar_eleitores_todos.html
+++ b/templates/editar_eleitores_todos.html
@@ -12,7 +12,7 @@
 
     {% if eleitores %}
     <h1>Lista de Eleitores</h1>
-    <div class="contain-table">
+    <div class="editar-eleitor-container-contain-table">
     <table>
         <thead>
             <tr>
