--- a/templates/nova_eleicao.html
+++ b/templates/nova_eleicao.html
@@ -31,7 +31,7 @@
 
             <label for="candidatos">Opcões de Candidatos para participar das Eleições:</label>
             
-            <div class="contain-table">
+            <div class="nova-eleicao-editar-container-contain-table">
             {% if candidatos %}
             <table >
                 <thead>
