--- a/templates/editar_candidatos_todos.html
+++ b/templates/editar_candidatos_todos.html
@@ -11,7 +11,7 @@
 
         {% if candidatos %}
         <h1>Lista de Candidatos</h1>
-        <div class="contain-table">
+        <div class="editar-candidato-todos-container-contain-table">
             <table>
                 <thead>
                     <tr>
