cadastro eleitor front

--- a/templates/cadastro_eleitor.html
+++ b/templates/cadastro_eleitor.html
@@ -32,8 +32,8 @@
             <input type="password" id="password-2" name="password-2" required>
             <div> 
                 <button type="submit">Cadastrar Eleitor</Em></button>
-                <a>Importar CSV</Em></a>
-            </div>
+                <!-- <a>Importar CSV</Em></a>
+            </div> -->
             
             {%if msg %}
                 <p>{{ msg }}</p>
